[project]
name = "agentup-systools"
version = "0.4.0"
description = "A plugin that provides Agentup Systools functionality"
requires-python = ">=3.11"
authors = [
    { name = "Luke Hinds", email = "luke@rdrocket.com" }
]
dependencies = [
    "agentup>=0.4.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.entry-points."agentup.plugins"]
agentup_systools = "agentup_systools.plugin:AgentupSystoolsPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentup_systools"]

# This file is needed to transfer the image logo files to the AgentUp registry
[tool.hatch.build.targets.wheel.force-include]
"static" = "static"

[tool.pytest.ini_options]
asyncio_mode = "auto"