[project]
name = "agentup-systools"
version = "0.6.2"
description = "A plugin that provides Agentup Systools functionality"
requires-python = ">=3.11"
authors = [{ name = "Luke Hinds", email = "luke@rdrocket.com" }]
dependencies = [
    "agentup>=0.6.4",
    "requests>=2.32.4",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.entry-points."agentup.plugins"]
agentup_systools = "agentup_systools.plugin:AgentupSystoolsPlugin"

[tool.ruff]
target-version = "py310"
line-length = 120
select = ["UP"]
exclude = [".git", "__pycache__", "build", "dist", ".venv", "venv"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentup_systools"]

# This file is needed to transfer the image logo files to the AgentUp registry
[tool.hatch.build.targets.wheel.force-include]
"static" = "static"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
venvPath = "."
venv = ".venv"
